vlib/v/checker/tests/generic_param_used_as_an_array_err.vv
fn test<T>(arr T) {
	a := arr[1]
	println(a)
}

fn main() {
	a := [1, 2, 3]!
	test(a)

	b := ['a', 'b', 'c']!
	test(b)
}
